--- a/app/globals.css
+++ b/app/globals.css
@@ -158,3 +158,9 @@ html {
   transform: translateY(-10px) scale(1.02);
   box-shadow: 0 20px 40px rgba(14, 96, 201, 0.2);
 }
+
+.social-proof {
+  background-image: url("../public/images/social_proof.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
