--- a/app/globals.css
+++ b/app/globals.css
@@ -159,8 +159,7 @@ html {
   box-shadow: 0 20px 40px rgba(14, 96, 201, 0.2);
 }
 
-.social-proof {
-  background-image: url("../public/images/social_proof.png");
-  background-repeat: no-repeat;
-  background-size: cover;
+.cta-shadow {
+  box-shadow: 0px 12px 0px 0px
+    rgba(13.999999999999982, 96.00000000000009, 201.00000000000003, 0.2);
 }
